add swag comment for users routes
